--- a/cpp_practice/book_practice/ch05/ch05.md
+++ b/cpp_practice/book_practice/ch05/ch05.md
@@ -206,7 +206,25 @@ int main() {
 ### 4．Daphne以10%的单利投资了100美元。也就是说，每一年的利润都是投资额的10%，即每年10美元：（利息=0.10×原始存款），而Cleo 以5%的复利投资了100美元。也就是说，利息是当前存款（包括获得的利息）的5% :（利息=0.05×当前存款）Cleo在第一年投资100美元的盈利是5%-一得到了105美元。下一年的盈利是105美元的5%——即5.25美元，依此类推。请编写一个程序，计算多少年后，Cleo 的投资价值才能超过Daphne的投资价值，并显示此时两个人的投资价值。
 
 ```c++
+// demo.cpp -- book practice demo
+#include <iostream>
 
+int main() {
+	using namespace std;
+	double value_daphne = 100;
+	double value_cleo = 100;
+	int year = 1;
+	for (year; value_cleo <= value_daphne; ++year) {
+		value_daphne = (0.10 * 100) + value_daphne;
+		value_cleo = (0.05 * value_cleo) + value_cleo;
+	}
+	cout << "The year when the investment value of Cleo will exceed Daphne's: "
+		 << year - 1 << "year" << endl;
+	cout << "Now the investment value of Daphne is: " << value_daphne << endl;
+	cout << "Now the investment value of Cleo is: " << value_cleo << endl;
+
+	return 0;
+}
 ```
 
 
@@ -214,7 +232,35 @@ int main() {
 ### 5．假设要销售《C++ For Fools》一书。请编写一个程序，输入全年中每个月的销售量（图书数量，而不是销售额）。程序通过循环，使用初始化为月份字符串的char*数组（或string对象数组）逐月进行提示，并将输入的数据储存在一个int数组中。然后，程序计算数组中各元素的总数，并报告这一年的销售情况。
 
 ```c++
+// demo.cpp -- book practice demo
+#include <iostream>
 
+int main() {
+	using namespace std;
+	int mon_volume[12], sales = 0;
+	const char * month[12] = {
+		"January",
+		"February",
+		"March",
+		"April",
+		"May",
+		"June",
+		"July",
+		"August",
+		"September",
+		"October",
+		"November",
+		"December"
+	};
+	for (int i = 0; i < 12; ++i) {
+		cout << "Plese enter the sales volume in "
+			<< month[i] << " : ";
+		cin >> mon_volume[i];
+		sales = sales + mon_volume[i];
+	}
+	cout << "The sales volume in this year are: " << sales << endl;
+	return 0;
+}
 ```
 
 
@@ -222,7 +268,49 @@ int main() {
 ### 6．完成编程练习5，但这一次使用一个二维数组来存储输入——3年中每个月的销售量。程序将报告每年销售量以及三年的总销售量。
 
 ```c++
+// demo.cpp -- book practice demo
+#include <iostream>
 
+int main() {
+	using namespace std;
+	int mon_volume[3][12];
+	int year_volume[3] = {0};
+	const char * name_month[12] = {
+		"January",
+		"February",
+		"March",
+		"April",
+		"May",
+		"June",
+		"July",
+		"August",
+		"September",
+		"October",
+		"November",
+		"December"
+	};
+	const char * name_year[3] = {
+		"first",
+		"second",
+		"third"
+	};
+
+	for (int year = 0; year < 3; ++year) {
+		for (int month = 0; month < 12; ++month) {
+			cout << "Plese enter the " 
+				 << name_year[year] <<" sales volume in "
+				 << name_month[month] << " : ";
+			cin >> mon_volume[year][month];
+			year_volume[year] = year_volume[year] + mon_volume[year][month];
+		}
+		cout << "The sales volume in the "
+			 << name_year[year] <<" year are: " 
+			 << year_volume[year] << endl;
+	}
+	cout << "The sales volume in three years are: " 
+		 << year_volume[0] + year_volume[1] + year_volume[2] << endl;
+	return 0;
+}
 ```
 
 
@@ -244,7 +332,39 @@ Here is your collection:
 ```
 
 ```c++
+// demo.cpp -- book practice demo
+#include <iostream>
+#include <string>
+#include <cstring>
+using namespace std;
 
+struct car {
+	string make_name;
+	int make_year;
+};
+
+int main() {
+	int user_num;
+	cout << "How many cars do you wish to catalog? ";
+	cin >> user_num;
+	cin.get();
+
+	car* p = new car[user_num];
+	for (int i = 0; i < user_num; ++i) {
+		cout << "Cae #" << i + 1 << ":\n";
+		cout << "Please enter the make: ";
+		getline(cin, p[i].make_name);
+		cout << "Please enter the year made: ";
+		cin >> p[i].make_year;
+		cin.get();
+	}
+	cout << "Here is your collection:\n";
+	for (int i = 0; i < user_num; ++i)
+		cout << p[i].make_year << " "
+		<< p[i].make_name << endl;
+	delete[] p;
+	return 0;
+}
 ```
 
 ### 8．编写一个程序，它使用一个char数组和循环来每次读取一个单词，直到用户输入done 为止。随后，该程序指出用户输入了多少个单词（不包括done在内)。下面是该程序的运行情况：
@@ -258,13 +378,45 @@ You entered a total of 7 words.
 ```
 
 ```c++
+// demo.cpp -- book practice demo
+#include <iostream>
+#include <string>
+#include <cstring>
+using namespace std;
 
+int main() {
+	char word[20];
+	cout << "Enter words (to stop, type the word done): \n";
+	cin >> word;
+	int i = 0;
+	for ( ; strcmp(word, "done"); ++i)
+		cin >> word;
+	
+	cout << "You entered a total of " << i << " words";
+	return 0;
+}
 ```
 
 ### 9．编写一个满足前一个练习中描述的程序，但使用string对象而不是字符数组。请在程序中包含头文件string，并使用关系运算符来进行比较测试。
 
 ```c++
+// demo.cpp -- book practice demo
+#include <iostream>
+#include <string>
+#include <cstring>
+using namespace std;
 
+int main() {
+	string word;
+	cout << "Enter words (to stop, type the word done): \n";
+	cin >> word;
+	int i = 0;
+	for ( ; word != "done"; ++i)
+		cin >> word;
+	
+	cout << "You entered a total of " << i << " words";
+	return 0;
+}
 ```
 
 ### 10．编写一个使用嵌套循环的程序，要求用户输入一个值，指出要显示多少行。然后，程序将显示相应行数的星号，其中第一行包括一个星号，第二行包括两个星号，依此类推。每一行包含的字符数等于用户指定的行数，在星号不够的情况下，在星号前面加上句点。该程序的运行情况如下:
@@ -277,6 +429,29 @@ Enter number of rows: 5
 .****
 *****
 ```
+
+```c++
+// demo.cpp -- book practice demo
+#include <iostream>
+using namespace std;
+
+int main() {
+	int row;
+	int count = 0;
+	cout << "Enter rows: \n";
+	cin >> row;
+	for (int i = 0; i < row; ++i) {
+		for (int j = 0; j < row - i - 1; ++j)
+			cout << ".";
+		for (int z = 0; z < i + 1; ++z)
+			cout << "*";
+		cout << endl;
+	}
+		
+	return 0;
+}
+```
+
 
 ```c++
 ```
