--- a/notes/ch06 分支语句和逻辑运算符.md
+++ b/notes/ch06 分支语句和逻辑运算符.md
@@ -1,1 +1,191 @@
+## 第六章 分支语句和逻辑运算符
 
+### 6.1 if 语句
+
+* if 的两种格式：if 和 if else
+
+  * 1、if 语句通用格式：
+
+    * ```c++
+      if (test-condition)
+          statement
+      ```
+
+    * 例程：（识别句点来确定句子的结尾）
+
+      * ```c++
+        // ch06_01_if.cpp -- using the if statement
+        #include <iostream>
+        int main() {
+        	using std::cin;
+        	using std::cout;
+        
+        	char ch;
+        	int spaces = 0;
+        	int total = 0;
+        	cin.get(ch);
+        	while (ch != '.') {
+        		if (ch == ' ')
+        			++spaces;
+        		++total;
+        		cin.get(ch);
+        	}
+        
+        	cout << spaces << "spaces, " << total;
+        	cout << " characters total in senternce\n";
+        
+        	return 0;
+        }
+        ```
+
+    * 结果：
+
+      * ```c++
+        The balloonist was an airhead
+        with lofty goals.
+        6spaces, 46 characters total in senternce
+        ```
+
+
+
+#### 6.1.1 if else 语句
+
+* if else 语句通用格式：
+
+  * ```c++
+    if (test-condition)
+        statement1
+    else
+        statement2
+    ```
+
+  * 例程：
+
+    * ```c++
+      // ch06_02_ifelse.cpp -- using the if else statement
+      #include <iostream>
+      int main() {
+      	char ch;
+      
+      	std::cout << "Type, and I shall repeat.\n";
+      	std::cin.get(ch);
+      	
+      	while (ch != '.') {
+      		if (ch == '\n')
+      			std::cout << ch;
+      		else
+      			std::cout << ++ch;
+      		std::cin.get(ch);
+      	}
+      
+      	std::cout << "\nPlease excuse the slight confusion.\n";
+      
+      	return 0;
+      }
+      ```
+
+  * 结果：
+
+    * ```c++
+      Type, and I shall repeat.
+      An ineffable joy suffused me as I beheld
+      Bo!jofggbcmf!kpz!tvggvtfe!nf!bt!J!cfifme
+      the wonders of modern computing.
+      uif!xpoefst!pg!npefso!dpnqvujoh
+      Please excuse the slight confusion.
+      ```
+
+
+
+#### 6.1.2 格式化 if else 语句
+
+* 如果需要多条语句，需要用大括号将它们括起来，组成一个块语句。
+
+
+
+#### 6.1.3 if else if else 结构
+
+* 1、if else 语句本身就是一条语句，所以可以放在else的后面：
+
+  * ```c++
+    if (test-condition1)
+        statement1;
+    else
+        if(test-condition2)
+            statement2;
+    	else
+            statement3;
+    ```
+
+* 2、if else 被包含在另一个 if else 中：
+
+  * ```c++
+    if (test-condition1)
+        statement1;
+    else if (test-condition2)
+        statement2;
+    else
+        statement3;
+    ```
+
+* 示例：
+
+  * ```c++
+    // ch06_03_ifelseif.cpp -- using the if else if else
+    #include <iostream>
+    const int Fave = 27;
+    int main() {
+    	using namespace std;
+    	int n;
+    
+    	cout << "Enter a number in the range 1-100 to find ";
+    	cout << "my favorite number: ";
+    	do {
+    		cin >> n;
+    		if (n < Fave)
+    			cout << "Too low -- guess again: ";
+    		else if (n > Fave)
+    			cout << "Too high -- guess again: ";
+    		else
+    			cout << Fave << " is right!\n";
+    	} while (n != Fave);
+    
+    	return 0;
+    }
+    ```
+
+* 结果：
+
+  * ```c++
+    Enter a number in the range 1-100 to find my favorite number: 50
+    Too high -- guess again: 25
+    Too low -- guess again: 37
+    Too high -- guess again: 31
+    Too high -- guess again: 28
+    Too high -- guess again: 27
+    27 is right!
+    ```
+
+* 条件运算符和错误防范：
+
+  * 许多程序员将更直观的表达式 variable = =value 反转为 value ==variable，以此来捕获将相等运算符误写为赋值运算符的错误。
+
+    * 例如，下述条件有效，可以正常工作:
+
+    * ```c++
+      if (3==myNumber)
+      ```
+
+    * 这也是老嵌的建议：
+
+      * 条件判断语句“==”号左边放常量，右边放变量，在《C陷阱与缺陷》里面有可以去查
+
+  * 📌但是不能是赋值运算符 "=" 号
+
+    * ```c++
+      if (3 = myNumber)
+      ```
+
+
+
+### 6.2 逻辑表达式
