--- a/notes/ch06 分支语句和逻辑运算符.md
+++ b/notes/ch06 分支语句和逻辑运算符.md
@@ -54,9 +54,9 @@
 
   * ```c++
     if (test-condition)
-        statement1
+        statement1;
     else
-        statement2
+        statement2;
     ```
 
   * 例程：
