--- a/notes/ch06 分支语句和逻辑运算符.md
+++ b/notes/ch06 分支语句和逻辑运算符.md
@@ -189,3 +189,135 @@
 
 
 ### 6.2 逻辑表达式
+
+#### 6.2.1 逻辑 OR 运算符：||
+
+* || 的优先级比关系运算符低；
+
+* 只要一个表达式为true，则整个逻辑表达式为true。
+
+* ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/d7f72b4d-3a25-4ad0-808c-b76699196196)
+
+
+* 示例：
+
+  * ```c++
+    // ch06_04_or.cpp -- using the logical OR operator
+    #include <iostream>
+    const int Fave = 27;
+    int main() {
+    	using namespace std;
+    	cout << "This program may reformat your hard disk\n"
+    			"and destroy all your data.\n"
+    			"Do you wish to continue? <y/n>";
+    
+    	char ch;
+    	cin >> ch;
+    	if (ch == 'y' || ch == 'Y')
+    		cout << "You were warned!\n";
+    	else if (ch == 'n' || ch == 'N')
+    		cout << "A wise choice ... bye\n";
+    	else
+    	cout << "That wasn't a y or n! Apparently you "
+    			"can't follow\ninstructions, so "
+    			"I'll trash your disk anyway.\n";
+    
+    	return 0;
+    }
+    ```
+
+* 结果：
+
+  * ```c++
+    This program may reformat your hard disk
+    and destroy all your data.
+    Do you wish to continue? <y/n>N
+    A wise choice ... bye
+    ```
+
+
+
+#### 6.2.2 逻辑 AND 运算符：&&
+
+* ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/0ff26a74-ccf5-4c56-867c-2148b5f5e8fd)
+
+* 示例：
+
+  * ```c++
+    // ch06_05_and.cpp -- using the logical AND operator
+    #include <iostream>
+    const int ArSize = 6;
+    int main() {
+    	using namespace std;
+    	float naaq[ArSize];
+    	cout << "Enter the NAAQs (New Age Awareness Quotients) "
+    		 << "of\nyour neighbors. Program terminates "
+    		 << "when you make\n" << ArSize << " entries "
+    		 << "or enter a negative value.\n";
+    
+    	int i = 0;
+    	float temp;
+    	cout << "First value: ";
+    	cin >> temp;
+    	while (i < ArSize && temp >= 0) {
+    		naaq[i] = temp;
+    		++i;
+    		if (i < ArSize) {
+    			cout << "Next value: ";
+    			cin >> temp;
+    		}
+    	}
+    
+    	if (i == 0)
+    		cout << "No data--bye\n";
+    	else {
+    		cout << "Enter your NAAQ: ";
+    		float you;
+    		cin >> you;
+    		int count = 0;
+    		for (int j = 0; j < i; j++)
+    			if (naaq[j] > you)
+    				++count;
+    		cout << count;
+    		cout << " of your neighbors have greater awareness of\n"
+    			 << "the New Age than you do.\n";
+    	}
+    		
+    	return 0;
+    }
+    ```
+
+* 结果：
+
+  * ```c++
+    Enter the NAAQs (New Age Awareness Quotients) of
+    your neighbors. Program terminates when you make
+    6 entries or enter a negative value.
+    First value: 28
+    Next value: 72
+    Next value: 15
+    Next value: 6
+    Next value: 130
+    Next value: 145
+    Enter your NAAQ: 50
+    3 of your neighbors have greater awareness of
+    the New Age than you do.
+    ///////////////////////////////////
+    Enter the NAAQs (New Age Awareness Quotients) of
+    your neighbors. Program terminates when you make
+    6 entries or enter a negative value.
+    First value: 123
+    Next value: 119
+    Next value: 4
+    Next value: 89
+    Next value: -1
+    Enter your NAAQ: 123.031
+    0 of your neighbors have greater awareness of
+    the New Age than you do.
+    ```
+
+
+
+#### 6.2.3 用 && 来设置取值
+
+
