--- a/notes/ch06 分支语句和逻辑运算符.md
+++ b/notes/ch06 分支语句和逻辑运算符.md
@@ -320,4 +320,186 @@
 
 #### 6.2.3 用 && 来设置取值
 
+* && 运算符还允许建立一系列 if else if else 语句，其中每种选择都对应于一个特定的取值范围。
+
+* 与char 指针变量可以通过指向一个字符串的开始位置来标识该字符串一样，char 指针数组也可以标识一系列字符串，只要将每一个字符串的地址赋给各个数组元素即可。
+
+* 示例：
+
+  * ```c++
+    // ch06_06_more_and.cpp -- using the logical AND operator
+    #include <iostream>
+    
+    const char* qualify[4] = {
+    	"10,000-meter race.\n",
+    	"mud tug-of-war.\n",
+    	"masters canoe jousting.\n",
+    	"pie-throwing festival.\n"
+    };
+    
+    int main() {
+    	using namespace std;
+    	int age;
+    	cout << "Enter your age in years: ";
+    	cin >> age;
+    	int index;
+    
+    	if (age > 17 && age < 35)
+    		index = 0;
+    	else if (age >= 35 && age < 50)
+    		index = 1;
+    	else if (age >= 50 && age < 60)
+    		index = 2;
+    	else
+    		index = 3;
+    
+    	cout << "You qualify for the " << qualify[index];
+    
+    	return 0;
+    }
+    ```
+
+* 结果：
+
+  * ```c++
+    Enter your age in years: 87
+    You qualify for the pie-throwing festival.
+    ```
+
+
+
+#### 6.2.4 逻辑 NOT 运算符：！
+
+* ！表示将它后面的表达式的真值取反。
+
+* 示例：
+
+  * ```c++
+    // ch06_07_not -- using the not operator
+    #include <iostream>
+    #include <climits>
+    
+    bool is_int(double);
+    
+    int main() {
+    	using namespace std;
+    	double num;
+    
+    	cout << "Yo, dude! Enter an integer value: ";
+    	cin >> num;
+    	while (!is_int(num)) {
+    		cout << "Out of range -- please try again: ";
+    		cin >> num;
+    	}
+    	int val = int(num);
+    	cout << "You've entered the integer " << val << "\nBye\n";
+    
+    	return 0;
+    }
+    
+    bool is_int(double x) {
+    	if (x <= INT_MAX && x >= INT_MIN)
+    		return true;
+    	else
+    		return false;
+    }
+    ```
+
+* 结果：
+
+  * ```c++
+    Yo, dude! Enter an integer value: 6234128679
+    Out of range -- please try again: -8000222333
+    Out of range -- please try again: 99999
+    You've entered the integer 99999
+    Bye
+    ```
+
+
+
+#### 6.2.5 逻辑运算符细节
+
+* 逻辑`OR`和逻辑`AND`运算符的优先级都于关系运算符；
+  * 逻辑`AND`运算符的优先级高于逻辑`OR`运算符
+* `!`运算符的优先级高于所有的关系运算符和算术运算符。
+
+
+
+#### 6.2.6 其他表示方式
+
+* ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/3e2e4289-c7b3-4649-8af0-3ddc2f59c4d5)
+
+
+
+
+### 6.3 自读函数库 cctype
+
+* 头文件cctype：确定字符是否为大写字母、数字、标点符号等工作；
+
+* isalpha()：检测字母，是字母返回一个非零值，否则返回0；
+
+* ispunct()：检测标点符号，是返回true。
+
+* isdigits()：来测试字符是否为数字字符，如3；
+
+* isspace()：来测试字符是否为空白，如换行符、空格和制表符；
+
+* ispunct()：来测试字符是否为标点符号。
+
+* 示例：
+
+  * ```c++
+    // ch06_08_cctypes.cpp -- using the ctype.h library
+    #include <iostream>
+    #include <cctype>
+    
+    int main() {
+    	using namespace std;
+    	cout << "Enter text for analysis, and type @"
+    			" to terminate input.\n";
+    	char ch;
+    	int whitespace = 0;
+    	int digits = 0;
+    	int chars = 0;
+    	int punct = 0;
+    	int others = 0;
+    
+    	cin.get(ch);
+    	while (ch != '@') {
+    		if (isalpha(ch))
+    			chars++;
+    		else if (isspace(ch))
+    			whitespace++;
+    		else if (isdigit(ch))
+    			digits++;
+    		else if (ispunct(ch))
+    			punct++;
+    		else
+    			others++;
+    		cin.get(ch);
+    	}
+    	
+    	cout << chars << " letters, "
+    		<< whitespace << " whitespace, "
+    		<< digits << " digits, "
+    		<< punct << " punctuations, "
+    		<< others << " others.\n";
+    
+    	return 0;
+    }
+    ```
+
+* 结果：
+
+  * ```c++
+    Enter text for analysis, and type @ to terminate input.
+    AdrenalVision International producer Adrienne Vismonger
+    announced production of their new 3-D film, a remake of
+    "My Dinner with Andre," scheduled for 2013. "Wait until
+    you see the the new scene with an enraged Collossipede!"@
+    177 letters, 33 whitespace, 5 digits, 9 punctuations, 0 others.
+    ```
+
+  * ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/ea380199-cf54-4978-a1c8-18f52a62cf30)
+
 
