--- a/notes/ch06 分支语句和逻辑运算符.md
+++ b/notes/ch06 分支语句和逻辑运算符.md
@@ -503,3 +503,61 @@
   * ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/ea380199-cf54-4978-a1c8-18f52a62cf30)
 
 
+
+
+### 6.4 ?:  运算符
+
+* `"?:"` 被用来代替if else语句的运算符；
+
+* 通用格式：
+
+  * ```c++
+    expression1 ? expression2 : expression3
+    ```
+
+  * 如果 expression1为 rue，则整个条件表达式的值为expression2 的值；否则，整个表达式的值为expression3的值。
+
+* 示例：
+
+  * ```c++
+    // ch06_09_condit.cpp -- using the conditional operator
+    #include <iostream>
+    
+    int main() {
+    	using namespace std;
+    	int a, b;
+    	cout << "Enter two integers: ";
+    	cin >> a >> b;
+    	cout << "The larger of " << a << " and " << b;
+    	int c = a > b ? a : b;
+    	cout << " is " << c << endl;
+    
+    	return 0;
+    }
+    ```
+
+* 结果：
+
+  * ```c++
+    Enter two integers: 25 28
+    The larger of 25 and 28 is 28
+    ```
+
+
+
+### 6.5 switch 语句
+
+* switch 语句更容易从大型列表中进行选择。
+
+* 通用格式：
+
+  * ```c++
+    switch (integer-expression){
+        case label1 : statement(s)
+        case label1 : statement(s)
+       ...
+        default     : statement(s)
+    }
+    ```
+
+  * 
