--- a/notes/ch06 分支语句和逻辑运算符.md
+++ b/notes/ch06 分支语句和逻辑运算符.md
@@ -560,4 +560,518 @@
     }
     ```
 
-  * 
+  * ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/94fbe14f-f611-4f7c-947a-61e3704ce0b3)
+
+
+* 示例：
+
+  * ```c++
+    // ch06_10_switch.cpp -- using the switch statement
+    #include <iostream>
+    using namespace std;
+    void showmenu();
+    void report();
+    void comfort();
+    
+    int main() {
+    	showmenu();
+    	int choice;
+    	cin >> choice;
+    	while (choice != 5) {
+    		switch (choice) {
+    		case 1	:	cout << "\n";
+    					break;
+    		case 2	:	report();
+    				    break;
+    		case 3	:	cout << "The boss was in all day.\n";
+    				    break;
+    		case 4	:	comfort();
+    					break;
+    		default	:	cout << "That's not a choice.\n";
+    		}
+    		showmenu();
+    		cin >> choice;
+    	}
+    	cout << "Bye!\n";
+    
+    	return 0;
+    }
+    
+    void showmenu() {
+    	cout << "Please enter 1, 2, 3, 4, or 5:\n"
+    			"1) alarm           2) report\n"
+    			"3) alibi           4) comfort\n"
+    			"5) quit\n";
+    }
+    
+    void report() {
+    	cout << "It's been an excellent week for business.\n"
+    			"Sales are up 120%. Expenses are down 35%.\n";
+    }
+    
+    void comfort() {
+    	cout << "Your employees think you are the finest CEO\n"
+    			"in the industry. The board of directors think\n"
+    			"you are the finest CEO in the industry.\n";
+    }
+    ```
+
+* 结果：
+
+  * ```c++
+    Please enter 1, 2, 3, 4, or 5:
+    1) alarm           2) report
+    3) alibi           4) comfort
+    5) quit
+    4
+    Your employees think you are the finest CEO
+    in the industry. The board of directors think
+    you are the finest CEO in the industry.
+    Please enter 1, 2, 3, 4, or 5:
+    1) alarm           2) report
+    3) alibi           4) comfort
+    5) quit
+    2
+    It's been an excellent week for business.
+    Sales are up 120%. Expenses are down 35%.
+    Please enter 1, 2, 3, 4, or 5:
+    1) alarm           2) report
+    3) alibi           4) comfort
+    5) quit
+    6
+    That's not a choice.
+    Please enter 1, 2, 3, 4, or 5:
+    1) alarm           2) report
+    3) alibi           4) comfort
+    5) quit
+    5
+    Bye!
+    ```
+
+  * 该程序需要 break语句来确保只执行switch 语句中的特定部分
+
+
+
+#### 6.5.1 将枚举量用作标签
+
+* 通常，cin无法识别枚举类型（它不知道程序员是如何定义它们的）；
+
+* switch 语句将 int 值和 枚举量 标签进行比较时，将枚举量提升为int。
+
+* 示例：
+
+  * ```c++
+    // ch06_11_enum.cpp -- using enum
+    #include <iostream>
+    
+    enum {red, orange, yellow, green, blue, violet, indigo};
+    
+    int main() {
+    	using namespace std;
+    	cout << "Enter color code (0-6): ";
+    	int code;
+    	cin >> code;
+    	while (code >= red && code <= indigo) {
+    		switch (code) {
+    			case red	: cout << "Her lips were red.\n"; break;
+    			case orange	: cout << "Her hair was orange..\n"; break;
+    			case yellow	: cout << "Her shoes were yellow.\n"; break;
+    			case green  : cout << "Her nails were green.\n"; break;
+    			case blue	: cout << "Her sweatsuit was blue.\n"; break;
+    			case violet	: cout << "Her eyes were violet.\n"; break;
+    			case indigo : cout << "Her mood was indigo.\n"; break;
+    		}
+    		cout << "Enter color code (0-6): ";
+    		cin >> code;
+    	}
+    	cout << "Bye.\n";
+    	return 0;
+    }
+    ```
+
+* 结果：
+
+  * ```c++
+    Enter color code (0-6): 3
+    Her nails were green.
+    Enter color code (0-6): 5
+    Her eyes were violet.
+    Enter color code (0-6): 2
+    Her shoes were yellow.
+    Enter color code (0-6): 8
+    Bye.
+    ```
+
+
+
+#### 6.5.2 switch 和 if else
+
+* switch 语句和 if else 语句都允许程序从选项中进行选择。
+* 相比之下，if else 更通用；
+* 然而，switch 并不是为处理取值范围而设计的。switch 语句中的每一个 case 标签都必须是一个单独的值。另外，这个值必须是整数(包括 char)，因此 switch 无法处理浮点测试。另外 case 标签值还必须是常量。如果选项涉及取值范围、浮点测试或两个变量的比较，则应使用 if else 语句。
+* 然而，如果所有的选项都可以使用整数常量来标识，则可以使用 switch 语句或 if else 语句。由于 switch语句是专门为这种情况设计的，因此，如果选项超过两个，则就代码长度和执行速度而言，switch 语句的效率更高。
+
+
+
+### 6.6 break 和 continue 语句
+
+* break：跳过循环的剩余部分，到达下一条语句；
+* continue：用于循环中，跳过循环体剩余的部分，开始新一轮的循环。
+* ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/0d44181b-4820-40a8-ac19-7b8d0c81c788)
+
+
+* 示例：
+
+  * ```c++
+    // jump.cpp -- using continue and break
+    #include <iostream>
+    const int ArSize = 80;
+    int main() {
+    	using namespace std;
+    	char line[ArSize];
+    	int spaces = 0;
+    
+    	cout << "Enter a line of text:\n";
+    	cin.get(line, ArSize);
+    	cout << "Complete line:\n" << line << endl;
+    	cout << "Line through first period:\n";
+    	for (int i = 0; line[i] != '\0'; i++) {
+    		cout << line[i];
+    		if (line[i] == '.')
+    			break;
+    		if (line[i] != ' ')
+    			continue;
+    		spaces++;
+    	}
+    	cout << "\n" << spaces << " spaces\n";
+    	cout << "Done.\n";
+    
+    	return 0;
+    }
+    ```
+
+* 结果：
+
+  * ```c++
+    Enter a line of text:
+    Let's do lunch today. You can pay!
+    Complete line:
+    Let's do lunch today. You can pay!
+    Line through first period:
+    Let's do lunch today.
+    3 spaces
+    Done.
+    ```
+
+* C++中也有go to 语句，但是大多数情况下，使用goto语句不好，而应使用结构化控制语句（if else、 switch、 continue等）来控制程序的流程。
+
+
+
+### 6.7 读取数字的循环
+
+* 1、将一系列数字读入到数组中，如果数组被填满或者输入了非数字的输入，循环将结束：
+
+  * 示例：
+
+    * ```c++
+      // ch06_13_cinfish.cpp -- non-numeric input terminates loop
+      #include <iostream>
+      
+      const int Max = 5;
+      
+      int main() {
+      	using namespace std;
+      	double fish[Max];
+      	cout << "Please rnter rhe weight of your fish.\n";
+      	cout << "You may enter up to " << Max
+      		 << " fish <q to terminate>.\n";
+      	cout << "fish #1: ";
+      	int i = 0;
+      	while (i < Max && cin >> fish[i]) {
+      		if (++i < Max)
+      			cout << "fish #" << i + 1 << ": ";
+      	}
+      	double total = 0.0;
+      	for (int j = 0; j < i; j++)
+      		total += fish[j];
+      	if (i == 0)
+      		cout << "No fish\n";
+      	else
+      		cout << total / i << " = average weight of "
+      			 << i << " fish\n";
+      	cout << "Done.\n";
+      
+      	return 0;
+      }
+      ```
+
+  * 结果：
+
+    * ```c++
+      Please rnter rhe weight of your fish.
+      You may enter up to 5 fish <q to terminate>.
+      fish #1: 30
+      fish #2: 35
+      fish #3: 25
+      fish #4: 40
+      fish #5: q
+      32.5 = average weight of 4 fish
+      Done.
+      ```
+
+    * ```c++
+      while (i < Max && cin >> fish[i])//如果逻辑 AND 表达式的左侧为 false ，则C++将不会判断右侧的表达式
+      ```
+
+* 2、如果用户输入非数字输入，程序将拒绝，并要求用户继续输入数字：
+
+  * 注意：必须先重置cin，然后才能删除错误输入。
+
+  * 示例：
+
+    * ```c++
+      // ch06_14_cingolf.cpp -- non-numeric input skipped
+      #include <iostream>
+      const int Max = 5;
+      int main() {
+      	using namespace std;
+      	int golf[Max];
+      	cout << "Please enter your golf scores.\n";
+      	cout << "You must enter " << Max << " rounds.\n";
+      	int i;
+      	for (i = 0; i < Max; i++) {
+      		cout << "round #" << i + 1 << ": ";
+      		while (!(cin >> golf[i])) {
+      			cin.clear();
+      			while (cin.get() != '\n')
+      				continue;
+      			cout << "Please enter a number: ";
+      		}
+      	}
+      	double total = 0.0;
+      	for (i = 0; i < Max; i++)
+      		total += golf[i];
+      	cout << total / Max << " = average score "
+      		 << Max << " rounds\n";
+      	return 0;
+      }
+      ```
+
+  * 结果：
+
+    * ```c++
+      Please enter your golf scores.
+      You must enter 5 rounds.
+      round #1: 88
+      round #2: 87
+      round #3: must i？
+      Please enter a number: 103
+      round #4: 94
+      round #5: 86
+      91.6 = average score 5 rounds
+      ```
+
+
+
+### 6.8 简单文件输入/输出
+
+#### 6.8.1 文本I/O和文本文件
+
+* 使用 cin 进行输入时，程序将输入视为一系列的字节，其中每个字节都被解释为字符编码。
+* 不管目标数据类型是什么，输入一开始都是字符数据--文本数据。然后，cin 对象负责将文本转换为其他类型。
+
+
+
+#### 6.8.2 写入到文本文件中
+
+* 对于文件输入，C++使用类似于cout的东西：
+
+  * 将cout 用于控制台输出的基本事实，为文件输出做准备：
+    * 必须包含头文件 iostream 。
+    * 头文件 iostream 定义了一个用处理输出的 ostream 类。
+    * 头文件 iostream 声明了一个名为 cout 的 ostream 变量(对象)。
+    * 必须指明名称空间 std; 例如，为引用元素 cout 和endl，必须使用编译指 using 或前缀 std:。
+    * 可以结合使用 cout 和运算符 << 来显示各种类型的数据。
+  * 文件输出与此极其相似：
+    * 必须包含头文件 fstream。
+    * 头文件 fstream 定义了一个用于处理输出的ofstream类。
+    * 需要声明一个或多个 ofstream 变量(对象)，并以自己喜欢的方式对其进行命名，条件是遵守常用的命名规则。
+    * 必须指明名称空间std; 例如，为引用元素ofstream，必须使用编译指令using 或前缀std:。
+    * 需要将 ofstream 对象与文件关联起来。为此，方法之一是使用 open() 方法。
+    * 使用完文件后，应使用方法 close() 将其关闭。
+    * 可结合使用 ofstream 对象和运算符 << 来输出各种类型的数据。
+
+* 注意：
+
+  * 虽然头文件 iostream 提供了一个预先定义好的名为 cout 的ostream 对象，但您必须声明自己的 ofstream 对象，为其命名，并将其同文件关联起来。下面演示了如何声明这种对象:
+
+    * ```c++
+      ofstream outFile;
+      ofstream fout;
+      ```
+
+  * 下面演示了如何将这种对象与特定的文件关联起来：
+
+    * ```c++
+      outFile.open("fish.txt");
+      char filename[50];
+      cin >> filename;
+      fout.open(filename);
+      ```
+
+* 使用文件输出的主要步骤如下：
+
+  * 包含头文件 fstream 。
+  * 创建一个 ofstream 对象。
+  * 将该 ofstream 对象同一个文件关联起来。
+  * 就像使用 cout 那样使用该 ofstream 对象。
+
+* 示例：
+
+  * ```c++
+    // ch06_15_outfile.cpp -- writing to a file
+    #include <iostream>
+    #include <fstream>
+    
+    int main() {
+    	using namespace std;
+    
+    	char automobile[50];
+    	int year;
+    	double a_price;
+    	double d_price;
+    
+    	ofstream outFile;
+    	outFile.open("carinfo.txt");
+    
+    	cout << "Enter the make and model of automobile: ";
+    	cin.getline(automobile, 50);
+    	cout << "Enter the model year: ";
+    	cin >> year;
+    	cout << "Enter the original asking price: ";
+    	cin >> a_price;
+    	d_price = 0.913 * a_price;
+    
+    	cout << fixed;				//以普通方式输出，非科学计数法
+    	cout.precision(2);			//保留2位小数点精度，括号内是几，小数点后面就保留几位
+    	cout.setf(ios_base::showpoint);
+    	cout << "Make and model: " << automobile << endl;
+    	cout << "Year: " << year << endl;
+    	cout << "Was asking $" << a_price << endl;
+    	cout << "Now asking $" << d_price << endl;
+    
+    	outFile << fixed;
+    	outFile.precision(2);
+    	outFile.setf(ios_base::showpoint);
+    	outFile << "Make and model: " << automobile << endl;
+    	outFile << "Year: " << year << endl;
+    	outFile << "Was asking $" << a_price << endl;
+    	outFile << "Now asking $" << d_price << endl;
+    
+    	outFile.close();
+    
+    	return 0;
+    }
+    ```
+
+* 结果：
+
+  * ```c++
+    Enter the make and model of automobile: Flitz Perky
+    Enter the model year: 2009
+    Enter the original asking price: 13500
+    Make and model: Flitz Perky
+    Year: 2009
+    Was asking $13500.00
+    Now asking $12325.50
+    ```
+
+
+
+#### 6.8.3 读取文本文件
+
+* 基于控制台输入，控制台输入涉及以下方面：
+
+  * 必须包含头文件 iostream。
+  * 头文件 iostream 定义了一个用处理输入的 istream 类。
+  * 头文件 iostream 声明了一个名为 cin 的 istream 变量(对象)。
+  * 必须指明名称空间 std; 例如，为引用元素 cin ，必须使用编译指令 using 或前缀 std:: 。
+  * 可以结合使用 cin 和运算符 >> 来读取各种类型的数据。
+  * 可以使用 cin 和 get() 方法来读取一个字符，使用 cin 和 getline() 来读取一行字符。
+  * 可以结合使用 cin 和 eof()、fail() 方法来判断输入是否成功。
+  * 对象 cin 本身被用作测试条件时，如果最后一个读取操作成功，它将被转换为布尔值 true，否则被转换为 false。
+
+* 文件输出：
+
+  * 必须包含头文件fstream。
+  * 头文件fstream定义了一个用于处理输入的ifstream类。
+  * 需要声明一个或多个ifstream 变量(对象)，并以自己喜欢的方式对其进行命名，条件是遵守常用的命名规则。
+  * 必须指明名称空间std;例如，为引用元素 ifstream，必须使用编译指令using 或前缀 std:。
+  * 需要将ifstream对象与文件关联起来。为此，方法之一是使用open()方法
+  * 使用完文件后，应使用 close()方法将其关闭。
+  * 可结合使用ifstream对象和运算符>>来读取各种类型的数据
+  * 可以使用 ifstream对象和 get()方法来读取一个字符使用ifstream 对象和getline()来读取一行字符
+  * 可以结合使用ifstream和eof()fail)等方法来判断输入是否成功。
+  * ifstream 对象本身被用作测试条件时，如果最后一个读取操作成功，它将被转换为布尔值 true，否则被转换为 false。
+
+* 示例：
+
+  * ```c++
+    // ch06_16_sumafile.cpp -- functions with an array argument
+    #include <iostream>
+    #include <fstream>
+    #include <cstdlib>
+    const int SIZE = 60;
+    int main() {
+    	using namespace std;
+    	char filename[SIZE];
+    	ifstream inFile;
+    	cout << "Enter name of data file: ";
+    	cin.getline(filename, SIZE);
+    	inFile.open(filename);
+    	if (!inFile.is_open()) {
+    		cout << "Could not open the file " << filename << endl;
+    		cout << "Program terminating.\n";
+    		exit(EXIT_FAILURE);
+    	}
+    	double value;
+    	double sum = 0.0;
+    	int count = 0;
+    
+    	inFile >> value;
+    	while (inFile.good()) {
+    		++count;
+    		sum += value;
+    		inFile >> value;
+    	}
+    	if (inFile.eof())
+    		cout << "End of file reached.\n";
+    	else if (inFile.fail())
+    		cout << "Input terminated by data mismatch.\n";
+    	else
+    		cout << "Input terminated for unknown reason.\n";
+    
+    	if (count == 0)
+    		cout << "No data processed.\n";
+    	else {
+    		cout << "Items read: " << count << endl;
+    		cout << "Sum: " << sum << endl;
+    		cout << "Average: " << sum / count << endl;
+    	}
+    	inFile.close();
+    
+    	return 0;
+    }
+    ```
+
+* 结果：
+
+  * ```c++
+    Enter name of data file: scores.txt
+    End of file reached.
+    Items read: 12
+    Sum: 204.5
+    Average: 17.0417
+    ```
+
+  * 详细介绍见P196-197
