--- a/cpp_practice/book_practice/ch06/ch06.md
+++ b/cpp_practice/book_practice/ch06/ch06.md
@@ -1,1 +1,333 @@
+# Book_Practice_ch06
+
+## 一、复习题
+
+### 1．请看下面两个计算空格和换行符数目的代码片段:
+
+```c++
+// Version 1
+while (cin.get(ch))		// quit on eof
+{
+    if (ch ==' ')
+        spaces++;
+    if (ch =='\n')
+        newlines++;
+}
+
+// Version 2
+while (cin.get(ch))// quit on eof
+{
+    if (ch ==' ')
+        spaces++;
+    else if (ch == '\n')
+        newlines++;
+}
+```
+
+第二种格式比第一种格式好在哪里呢?
+
+* if else效率更高，如果当遇到空格符时候，第一种会判断完空格符后继续判断是否为换行符，浪费时间。而第二种能够在判断是空格符之后直接跳过换行符判断，进入新一轮的字符判断中。
+
+
+
+
+### 2．在程序清单6.2中，用 ch+1  替换 ++ch  将发生什么情况呢？
+
+*  ch+1 会将字符串与 1 相加 转换为int类型，作为数字打印出来；
+*  而++ch不会这样，仍然为char类型。
+
+
+
+### 3．请认真考虑下面的程序:
+
+```c++
+#include <iostream>
+using namespace std;
+int main(){
+    char ch;
+    int ctl, ct2;
+    
+    ctl = ct2 = 0;
+    while ((ch = cin.get()) !='$'){
+        cout << ch;
+        ctl++;
+        if (ch = '$')
+            ct2++;
+        cout << ch;
+    }
+    cout << "ctl = " << ctl <<", ct2 = " << ct2 << "\n";
+    return 0;
+}
+
+```
+
+```c++
+//假设输入如下(请在每行末尾按回车键):
+Hi!
+Send $10 or $20 now!
+//则输出将是什么 (还记得吗，输入被缓冲)？
+```
+
+* 由于if判断中是赋值=号，所以条件永远为真，每输入一个字符都会输出自己和$：
+
+  * ```c++
+    Hi!
+    H$i$!$
+    $Send $10 or $20 now!
+    S$e$n$d$ $ctl = 9, ct2 = 9
+    ```
+
+
+
+### 4．创建表示下述条件的逻辑表达式：
+
+```c++
+a. weight大于或等于115，但小于125。
+b. ch为q或Q。
+c. x为偶数，但不是26。
+d. x为偶数，但不是26的倍数。
+e. donation为1000-2000或guest为1。
+f. ch是小写字母或大写字母(假设小写字母是依次编码的，大写字母也是依次编码的，但在大小写字母间编码不是连续的)。
+```
+
+```c++
+a. weight >= 115 && weight < 125
+b. ch == 'q' || ch == 'Q'。
+c. x % 2 == 0 && x != 26
+d. x % 2 == 0 && (x % 26) != 0
+e. donation <=1000 && donation >= 2000 || guest == 1
+f. (ch >= 'a' && ch <= 'z') ||  (ch >= 'A' && ch <= 'Z')
+```
+
+
+
+### 5．在英语中,“I will not not speak (我不会不说)”的意思与“ will speak(我要说)”相同。在C++中，!!x是否与x相同呢?
+
+* 不一定，如果x为0或1时成立；
+* 而x为其他数时候，!!x就是说!(!x)成立与否，返回的是bool变量0/1
+
+
+
+### 6．创建一个条件表达式，其值为变量的绝对值。也是说，如果变量 x 为正，则表达式的值为 x ；但如果 x 为负，则表达式的值为-x——这是一个正值。
+
+```c++
+(x >= 0 ) ? x : -x;
+```
+
+
+
+### 7．用switch改写下面的代码片段
+
+```c++
+if (ch =='A')
+    a_grade++;
+else if (ch =='B')
+    b grade++;
+else if (ch =='C')
+    c_grade++;
+else if (ch =='D')
+    d_grade++;
+else
+	f_grade++;
+```
+
+```c++
+switch(ch){
+    case 'A' :	a_grade++;
+        		break;
+    case 'B' :	b_grade++;
+        		break;
+    case 'C' :	c_grade++;
+        		break;
+    case 'D' :	d_grade++;
+        		break;
+    default  :	f_grade++;
+}
+```
+
+
+
+### 8．对于程序清单 6.10，与使用数字相比，使用字符（如 a和c）表示菜单选项和 case 标签有何优点呢？
+
+（提示：想想用户输入 q  和输入 5 的情况。）
+
+* 如果使用数字标签，当用户输入非整数（如q）的时候，程序将因为整数输入不能处理字符而挂起；
+* 如果使用字符标签，而用户输入了一个整数（如5），则字符输入5将被作为字符处理，然后进入default部分。
+
+
+
+### 9．请看下面的代码片段：
+
+```c++
+int line = 0;
+char ch;
+while (cin.get(ch)){
+    if (ch =='Q')
+        break;
+    if (ch != 'n')
+        continue;
+    line++;
+}
+```
+
+请重写该代码片段，不要使用 break 和 continue 语句。
+
+```c++
+int line = 0;
+char ch;
+while (cin.get(ch) && (ch != 'Q')){
+    if (ch == 'n') 
+    	line++;
+}
+```
+
+
+
+
+
+## 二、编程练习
+
+### 1．编写一个程序，读取键盘输入，直到遇到@符号为止，并回显输入（数字除外） ，同时将大写字符转换为小写，将小写字符转换为大写(别忘了 cctype 函数系列)。
+
+```c++
+
+```
+
+
+
+### 2．编写一个程序，最多将 10个 donation 值读入到一个 double 数组中（如果您愿意，也可使用模板类 array）。程序遇到非数字输入时将结束输入，并报告这些数字的平均值以及数组中有多少个数字大于平均值。
+
+```c++
+
+```
+
+
+
+### 3．编写一个菜单驱动程序的雏形。该程序显示一个提供 4 个选项的菜单每个选项用一个字母标记。如果用户使用有效选项之外的字母进行响应，程序将提示用户输入一个有效的字母，直到用户这样做为止。然后，该程序使用一条 switch 语句，根据用户的选择执行一个简单操作。该程序的运行情况如下:
+
+```c++
+Please enter one of the followingchoices:
+c) carnivore			p) pianist
+t) tree				    g) game
+f
+Please enter a c, p, t, or g: q
+Please enter a c, p, t, or g: t
+A maple is a tree.
+```
+
+
+
+### 4．加入 Benevolent  Order of Programmer 后，在 BOP 大会上，人们便可以通过加入者的真实姓名、头衔或秘密 BOP 姓名来了解他（她）。请编写一个程序，可以使用真实姓名、头衔、秘密姓名或成员偏好来列出成员。编写该程序时，请使用下面的结构:
+
+```c++
+// Benevolent Order of Programmers name structure
+struct bop{
+    char fullname[strsize]; // real name
+    char title[strsizel;	// job title
+    char bopname[strsize];	// secret BOP name
+    int preference;			// 0 = fullname，1 = title，2 = bopname
+};
+
+```
+
+* 该程序创建一个由上述结构组成的小型数组，并将其初始化为适当的值。另外，该程序使用一个循环，让用户在下面的选项中进行选择：
+
+* ```c++
+  a. display by name		b. display by title
+  c. display by bopname	d. display by preference
+  q. quit
+  ```
+
+* 注意，“display by preference” 并不意味着显示成员的偏好，而是意味着根据成员的偏好来列出成员。例如，如果偏好号为 1，则选择d 将显示程序员的头衔。该程序的运行情况如下:
+
+* ```c++
+  Benevolent Order of Programmers Report
+  a. display by name		b. display by title
+  c. display by bopname	d. display by preference
+  q. quit
+  Enter your choice: a
+  Wimp Macho
+  Raki Rhodes
+  Celia Laiter
+  Hoppy Hipman
+  Pat Hand
+  Next choice: d
+  Wimp Macho
+  Junior Programmer
+  MIPS
+  Analyst TraineeLOOPY
+  Next choice: q
+  Bye!
+  ```
+
+
+
+### 5．在 Neutronia 王国，货币单位是 tvarp，收入所得税的计算方式如下：
+
+```c++
+5000 tvarps:不收税
+5001~15000tvarps: 10%
+15001~35000tvarps: 15%
+35000tvarps以上: 20%
+```
+
+* 例如，收入为38000 tvarps 时，所得税为 5000 x 0.00 + 10000  0.10 + 20000 x 0.15 + 3000 x 0.20，即4600 tvarps。请编写一个程序，使用循环来要求用户输入收入，并报告所得税。当用户输入负数或非数字时，循环将结束。
+
+### 6．编写一个程序，记录捐助给“维护合法权利团体”的资金。该程序要求用户输入捐献者数目，然后要求用户输入每一个捐献者的姓名和款项。这些信息被储存在一个动态分配的结构数组中。每个结构有两个成员:用来储存姓名的字符数组(或 string 对象)和用来存储款项的 double 成员。读取所有的数据后,程序将显示所有捐款超过 10000 的捐款者的姓名及其捐款数额。该列表前应包含一个标题，指出下面的捐款者是重要捐款人(Grand Patrons)。然后，程序将列出其他的捐款者，该列表要以 Patrons 开头。如果某种类别没有捐款者，则程序将打印单词“none”。该程序只显示这两种类别，而不进行排序。
+
+```c++
+
+```
+
+
+
+###  7．编写一个程序，它每次读取一个单词，直到用户只输入 q。然后，该程序指出有多少个单词以元音打头，有多少个单词以辅音打头，还有多少个单词不属于这两类。为此，方法之一是，使用 isalpha( )来区分以字母和其他字符打头的单词，然后对于通过了 isalpha( )测试的单词，使用if或 switch 语句来确定哪些以元音打头。该程序的运行情况如下:
+
+```c++
+Enter words (q to quit):
+The 12 awesome oxen ambled
+quietly across 15 meters of lawn. q
+5 words beginning with vowels
+4 words beginning with consonants
+2 others
+```
+
+```c++
+
+```
+
+
+
+### 8．编写一个程序，它打开一个文件文件，逐个字符地读取该文件，直到到达文件末尾，然后指出该文件中包含多少个字符。
+
+```C++
+
+```
+
+```c++
+
+```
+
+### 9．完成编程练习 6，但从文件中读取所需的信息。该文件的第一项应为捐款人数，余下的内容应为成对的行。在每一对中，第一行为捐款人姓名，第二行为捐款数额。即该文件类似于下面:
+
+```c++
+4
+Sam Stone
+2000
+Freida Flass
+100500
+Tammy Tubbs
+5000
+Rich Raptor
+55000
+```
+
+```c++
+
+```
+
+```c++
+
+```
+
 
