--- a/cpp_practice/book_practice/ch06/ch06.md
+++ b/cpp_practice/book_practice/ch06/ch06.md
@@ -190,7 +190,31 @@ while (cin.get(ch) && (ch != 'Q')){
 ### 1．编写一个程序，读取键盘输入，直到遇到@符号为止，并回显输入（数字除外） ，同时将大写字符转换为小写，将小写字符转换为大写(别忘了 cctype 函数系列)。
 
 ```c++
+// demo.cpp -- book practice demo
+#include <iostream>
+#include <cctype>
+using namespace std;
+int main() {
+    cout << "Enter text for analysis, and type @"
+        " to terminate input.\n";
 
+    char ch;
+    
+    cin.get(ch);
+    while (ch != '@') {
+        if (isdigit(ch))
+            continue;
+        else {
+            if (ch >= 'A' && ch <= 'Z') 
+                ch = ch + 32;
+            else if (ch >= 'a' && ch <= 'z') 
+                ch = ch - 32;
+            cout << ch;
+            }
+        cin.get(ch);
+        }
+    return 0;
+    }
 ```
 
 
@@ -198,7 +222,34 @@ while (cin.get(ch) && (ch != 'Q')){
 ### 2．编写一个程序，最多将 10个 donation 值读入到一个 double 数组中（如果您愿意，也可使用模板类 array）。程序遇到非数字输入时将结束输入，并报告这些数字的平均值以及数组中有多少个数字大于平均值。
 
 ```c++
+// demo.cpp -- book practice demo
+#include <iostream>
+const int Max = 10;
+using namespace std;
 
+int main() {
+    double donation[Max];
+    cout << "Please enter the donation: .\n";
+    cout << "You may enter up to " << Max << "donations <q to terminate>.\n";
+    cout << "Donation #1: ";
+    int i = 0;
+    while(i < Max && cin >> donation[i]){
+        if (++i < Max)
+            cout << "Donation #" << i + 1 << ": ";
+    }
+    double total = 0.0;
+    for (int j = 0; j < i; ++j)
+        total += donation[j];
+    if (i == 0)
+        cout << "No donation.\n";
+    else
+        cout << total / i << " = average of "
+        << i << " donation\n";
+    cout << "Done.\n";
+
+
+    return 0;
+    }
 ```
 
 
