--- a/notes/ch06 分支语句和逻辑运算符.md
+++ b/notes/ch06 分支语句和逻辑运算符.md
@@ -782,7 +782,7 @@
       int main() {
       	using namespace std;
       	double fish[Max];
-      	cout << "Please rnter rhe weight of your fish.\n";
+      	cout << "Please enter the weight of your fish.\n";
       	cout << "You may enter up to " << Max
       		 << " fish <q to terminate>.\n";
       	cout << "fish #1: ";
@@ -808,7 +808,7 @@
   * 结果：
 
     * ```c++
-      Please rnter rhe weight of your fish.
+      Please enter the weight of your fish.
       You may enter up to 5 fish <q to terminate>.
       fish #1: 30
       fish #2: 35
