--- a/cpp_practice/book_practice/ch06/ch06.md
+++ b/cpp_practice/book_practice/ch06/ch06.md
@@ -266,6 +266,39 @@ Please enter a c, p, t, or g: t
 A maple is a tree.
 ```
 
+```c++
+// demo.cpp -- book practice demo
+#include <iostream>
+using namespace std;
+void showmenu(void);
+
+int main() {
+    char choice;
+    showmenu();
+    while (cin >> choice) {
+        switch (choice) {
+            case 'c':   cout << "A maple is a carnivore.\n";
+                break;
+            case 'p':   cout << "A maple is a pianist.\n";
+                break;
+            case 't':   cout << "A maple is a tree.\n";
+                break;
+            case 'g':   cout << "A maple is a game.\n";
+                break;
+            default :   cout << "Please enter a c, p, t, or g: ";
+        }
+    }
+
+    return 0;
+ }
+
+void showmenu(void) {
+    cout << "Please enter one of the followingchoices: \n"
+            "c) carnivore			p) pianist\n"
+            "t) tree				g) game\n";
+}
+```
+
 
 
 ### 4．加入 Benevolent  Order of Programmer 后，在 BOP 大会上，人们便可以通过加入者的真实姓名、头衔或秘密 BOP 姓名来了解他（她）。请编写一个程序，可以使用真实姓名、头衔、秘密姓名或成员偏好来列出成员。编写该程序时，请使用下面的结构:
